increase memory on batches